# espetos-cia-site

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 266d3b54311a_criar_tabelas_iniciais.py  4e176fd220d9_criar_tabelas_cliente_e_pedido.py  5043f2f28de7_seed_dados_iniciais.py  56c571de6c47_seed_cliente_e_pedido.py  ab5352d7c140_initial_migration.py  e74b3e8bb86d_seed_dados_iniciais.py
backend/app/: README.md  main.py  schemas.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py
backend/app/db/: database.py  db.py  session.py
backend/app/models/: cardapio.py  cliente.py  contato.py  pedido.py  promocao.py  user.py
backend/app/routers/: cardapio.py  clientes.py  contato.py  pedidos.py  promocao.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Banners.jsx  Depoimentos.jsx  Footer.jsx  Galeria.jsx  Header.jsx  HeaderCarousel.jsx  Navbar.jsx  ProdutosDestaque.jsx
frontend/src/hooks/: useNavbarOffset.js
frontend/src/pages/: Cardapio.jsx  Contato.jsx  Home.jsx  Promocoes.jsx
frontend/src/styles/: App.css  Banners.css  Cardapio.css  Depoimentos.css  Footer.css  Galeria.css  Header.css  HeaderCarousel.css  Navbar.css  ProdutosDestaque.css
